cmake_minimum_required(VERSION 3.21)
project (1613)

set(CMAKE_CXX_STANDARD 14)

add_executable(1613 1613.cpp 1112.cpp)


add_executable(1047 1047.cpp)
add_executable(1112 1112.cpp)
add_executable(1303 1303.cpp)
add_executable(1184 1184.cpp)
add_executable(1494 1494.cpp)
add_executable(1987 1987.cpp)
add_executable(1471 1471.cpp)
add_executable(main 1613.cpp)
add_executable(1014 1014.cpp)
add_executable(1752 1752.cpp)
add_executable(Spline Spline.cpp)
add_executable(1126 1126.cpp)
add_executable(1009 1009.cpp)
add_executable(1073 1073.cpp)
add_executable(1018 1018.cpp)
add_executable(1078 1078.cpp)
add_executable(1658 1658.cpp)

add_executable(1298 1298.cpp)
add_executable(1590 1590.cpp)
add_executable(1356 1356.cpp)
add_executable(1087 1087.cpp)
add_executable(1242 1242.cpp)
add_executable(2062 2062.cpp)
add_executable(tmp tmp.cpp)
add_executable(delete_this delete_this.cpp)